# server/openapi.json
@@ -9,7 +9,7 @@
         "requestBody": {
           "required": true,
           "content": {
-            "application/json": {
+            "multipart/form-data": {
               "schema": {
                 "$ref": "#/components/schemas/CreateVideoDto"
               }
@@ -18,7 +18,10 @@
         },
         "responses": {
           "201": {
-            "description": ""
+            "description": "The video has been successfully created."
+          },
+          "400": {
+            "description": "Bad request."
           }
         },
         "tags": [
@@ -31,7 +34,7 @@
         "parameters": [],
         "responses": {
           "200": {
-            "description": ""
+            "description": "List of all videos."
           }
         },
         "tags": [
@@ -48,6 +51,7 @@
             "name": "id",
             "required": true,
             "in": "path",
+            "description": "Video ID",
             "schema": {
               "type": "string"
             }
@@ -55,7 +59,72 @@
         ],
         "responses": {
           "200": {
-            "description": ""
+            "description": "The video has been successfully retrieved."
+          },
+          "404": {
+            "description": "Video not found."
+          }
+        },
+        "tags": [
+          "videos"
+        ]
+      },
+      "patch": {
+        "operationId": "VideosController_updateVideo",
+        "summary": "Update video",
+        "parameters": [
+          {
+            "name": "id",
+            "required": true,
+            "in": "path",
+            "description": "Video ID",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/UpdateVideoDto"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "The video has been successfully updated."
+          },
+          "404": {
+            "description": "Video not found."
+          }
+        },
+        "tags": [
+          "videos"
+        ]
+      },
+      "delete": {
+        "operationId": "VideosController_deleteVideo",
+        "summary": "Delete video with content",
+        "parameters": [
+          {
+            "name": "id",
+            "required": true,
+            "in": "path",
+            "description": "Video ID",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "The video has been successfully deleted."
+          },
+          "404": {
+            "description": "Video not found."
           }
         },
         "tags": [
@@ -63,7 +132,7 @@
         ]
       }
     },
-    "/api/comments/{videoId}": {
+    "/api/videos/{videoId}/comments": {
       "post": {
         "operationId": "VideoCommentsController_createComment",
         "summary": "Create comment",
@@ -72,6 +141,7 @@
             "name": "videoId",
             "required": true,
             "in": "path",
+            "description": "Video ID",
             "schema": {
               "type": "string"
             }
@@ -88,8 +158,14 @@
           }
         },
         "responses": {
-          "201": {
-            "description": ""
+          "200": {
+            "description": "The comment has been successfully created."
+          },
+          "400": {
+            "description": "Bad request."
+          },
+          "404": {
+            "description": "Video not found."
           }
         },
         "tags": [
@@ -104,6 +180,7 @@
             "name": "videoId",
             "required": true,
             "in": "path",
+            "description": "Video ID",
             "schema": {
               "type": "string"
             }
@@ -111,7 +188,7 @@
         ],
         "responses": {
           "200": {
-            "description": ""
+            "description": "The comment has been successfully updated."
           }
         },
         "tags": [
@@ -119,14 +196,116 @@
         ]
       }
     },
-    "/api/comments": {
-      "get": {
-        "operationId": "VideoCommentsController_getAllComments",
-        "summary": "Get all comments",
-        "parameters": [],
+    "/api/videos/{videoId}/comments/{commentId}": {
+      "patch": {
+        "operationId": "VideoCommentsController_updateComment",
+        "summary": "Update a comment",
+        "parameters": [
+          {
+            "name": "videoId",
+            "required": true,
+            "in": "path",
+            "description": "Video ID",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "commentId",
+            "required": true,
+            "in": "path",
+            "description": "Comment ID",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/UpdateCommentDto"
+              }
+            }
+          }
+        },
         "responses": {
           "200": {
-            "description": ""
+            "description": "The comment has been successfully updated."
+          },
+          "404": {
+            "description": "Video or comment not found."
+          }
+        },
+        "tags": [
+          "comments"
+        ]
+      },
+      "delete": {
+        "operationId": "VideoCommentsController_deleteComment",
+        "summary": "Delete a comment",
+        "parameters": [
+          {
+            "name": "videoId",
+            "required": true,
+            "in": "path",
+            "description": "Video ID",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "commentId",
+            "required": true,
+            "in": "path",
+            "description": "Comment ID",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "The comment has been successfully deleted."
+          },
+          "404": {
+            "description": "Video or comment not found."
+          }
+        },
+        "tags": [
+          "comments"
+        ]
+      },
+      "get": {
+        "operationId": "VideoCommentsController_getComment",
+        "summary": "Get comment by ID",
+        "parameters": [
+          {
+            "name": "videoId",
+            "required": true,
+            "in": "path",
+            "description": "Video ID",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "commentId",
+            "required": true,
+            "in": "path",
+            "description": "Comment ID",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "The comment has been successfully retrieved."
+          },
+          "404": {
+            "description": "Video or comment not found."
           }
         },
         "tags": [
@@ -134,7 +313,7 @@
         ]
       }
     },
-    "/api/likes/video/{videoId}/comment/{commentId}": {
+    "/api/videos/{videoId}/comments/{commentId}/likes": {
       "post": {
         "operationId": "LikesController_likeComment",
         "summary": "Like a comment",
@@ -180,6 +359,43 @@
           "likes"
         ]
       },
+      "get": {
+        "operationId": "LikesController_getCommentLikeCount",
+        "summary": "Get like count for a comment",
+        "parameters": [
+          {
+            "name": "videoId",
+            "required": true,
+            "in": "path",
+            "description": "ID of the video",
+            "schema": {
+              "type": "string"
+            }
+          },
+          {
+            "name": "commentId",
+            "required": true,
+            "in": "path",
+            "description": "ID of the comment to get like count",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Successfully retrieved like count."
+          },
+          "404": {
+            "description": "Video or comment not found."
+          }
+        },
+        "tags": [
+          "likes"
+        ]
+      }
+    },
+    "/api/videos/{videoId}/comments/{commentId}/likes/{likeId}": {
       "delete": {
         "operationId": "LikesController_unlikeComment",
         "summary": "Unlike a comment",
@@ -224,47 +440,12 @@
         "tags": [
           "likes"
         ]
-      },
-      "get": {
-        "operationId": "LikesController_getCommentLikeCount",
-        "summary": "Get like count for a comment",
-        "parameters": [
-          {
-            "name": "videoId",
-            "required": true,
-            "in": "path",
-            "description": "ID of the video",
-            "schema": {
-              "type": "string"
-            }
-          },
-          {
-            "name": "commentId",
-            "required": true,
-            "in": "path",
-            "description": "ID of the comment to get like count",
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Successfully retrieved like count."
-          },
-          "404": {
-            "description": "Video or comment not found."
-          }
-        },
-        "tags": [
-          "likes"
-        ]
       }
     }
   },
   "info": {
-    "title": "API Documentation",
-    "description": "The API description",
+    "title": "Video sharing site",
+    "description": "The API description of video sharing site",
     "version": "1.0",
     "contact": {}
   },
@@ -287,11 +468,50 @@
     "schemas": {
       "CreateVideoDto": {
         "type": "object",
-        "properties": {}
+        "properties": {
+          "title": {
+            "type": "string",
+            "description": "The title of the video",
+            "example": "My Awesome Video"
+          },
+          "description": {
+            "type": "string",
+            "description": "A description of the video content",
+            "example": "This video showcases my latest project"
+          }
+        },
+        "required": [
+          "title"
+        ]
+      },
+      "UpdateVideoDto": {
+        "type": "object",
+        "properties": {
+          "title": {
+            "type": "string",
+            "description": "The title of the video",
+            "example": "My Awesome Video"
+          },
+          "description": {
+            "type": "string",
+            "description": "A description of the video content",
+            "example": "This video showcases my latest project"
+          }
+        }
       },
       "CreateCommentDto": {
         "type": "object",
         "properties": {}
+      },
+      "UpdateCommentDto": {
+        "type": "object",
+        "properties": {
+          "content": {
+            "type": "string",
+            "description": "The updated content of the comment",
+            "example": "This is an updated comment"
+          }
+        }
       },
       "CreateLikeDto": {
         "type": "object",
