# server/src/dto/update-comment.dto.ts
@@ -1,0 +1,13 @@
+import { ApiProperty } from '@nestjs/swagger';
+import { IsString, IsOptional } from 'class-validator';
+
+export class UpdateCommentDto {
+  @ApiProperty({
+    description: 'The updated content of the comment',
+    example: 'This is an updated comment',
+    required: false,
+  })
+  @IsString()
+  @IsOptional()
+  content?: string;
+}
